--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "joi": "^17.6.4"
+    "joi": "^17.6.4",
+    "mongoose": "^6.7.1"
   }
 }
